--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SignInActivity">
+    tools:context=".activity.SignInActivity">
 
     <ImageView
         android:id="@+id/iv_signin_ilus"
@@ -45,7 +45,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_title_login" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/et_name_layout"
+        android:id="@+id/et_email_signin"
         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -63,7 +63,7 @@
 
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/et_name"
+            android:id="@+id/et_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/email"
@@ -84,7 +84,7 @@
         android:layout_marginEnd="@dimen/_24dp"
         android:layout_marginTop="@dimen/_16dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_name_layout"
+        app:layout_constraintTop_toBottomOf="@+id/et_email_signin"
         app:startIconDrawable="@drawable/ic_lock">
 
 
