--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SignUpActivity">
+    tools:context=".activity.SignUpActivity">
 
     <TextView
         android:id="@+id/tv_title_signup"
@@ -35,7 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="44dp"
-        android:background="@color/white"
+        android:background="@color/black"
         android:contentDescription="@string/back"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.062"
@@ -44,7 +44,7 @@
         app:srcCompat="@drawable/ic_baseline_arrow_back_24" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/et_name_layout"
+        android:id="@+id/et_name_signup"
         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -71,7 +71,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/et_email_layout"
+        android:id="@+id/et_email_signin"
         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -84,7 +84,7 @@
         app:boxCornerRadiusTopStart="@dimen/_16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_name_layout"
+        app:layout_constraintTop_toBottomOf="@+id/et_name_signup"
         app:startIconDrawable="@drawable/icon_email">
 
 
@@ -111,7 +111,7 @@
         app:boxCornerRadiusTopStart="@dimen/_16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_email_layout"
+        app:layout_constraintTop_toBottomOf="@+id/et_email_signin"
         app:startIconDrawable="@drawable/ic_lock">
 
 
